--- a/package.json
+++ b/package.json
@@ -18,8 +18,9 @@
   "description": "",
   "dependencies": {
     "cors": "^2.8.5",
-    "dotenv": "^16.4.5",
+    "dotenv": "^16.4.7",
     "express": "^4.21.1",
+    "init": "^0.1.2",
     "multer": "^1.4.5-lts.1",
     "mysql2": "^3.11.4",
     "sequelize": "^6.37.5",
@@ -27,7 +28,7 @@
     "vue-router": "^4.5.0"
   },
   "devDependencies": {
-    "nodemon": "^3.1.7",
+    "nodemon": "^3.1.9",
     "ts-node": "^10.9.2",
     "typescript": "^5.6.3"
   }
